edit profile and backoffice

--- a/html-design/html/edit-profile.html
+++ b/html-design/html/edit-profile.html
@@ -70,10 +70,20 @@
 					<div class="padding-rl-10 middle-section width-80">
 						<div class="edit-profile-form">
 							<form action="">
-								<div class="form-title">Edit profile</div>
-								<div class="form-subtitle">
-									General information
-								</div>								
+								<div class="edit-profile-title-wrapr">
+									<div class="edit-title-wrapr">
+											<div class="form-title">Edit profile</div>
+											<div class="form-subtitle">
+												General information
+											</div>
+									</div>
+									<div class="edit_profile_wrapr">
+											<div class="image-wrapr"></div>
+											<a href="#">Edit profile image</a>
+										</div>	
+								</div>
+								
+															
 								<div class="general-information-wrapper">
 								  	<div class="form-group">
 									    <label for="username">User name</label>
