--- a/html-design/backoffice/create-cms-page.html
+++ b/html-design/backoffice/create-cms-page.html
@@ -157,7 +157,7 @@
                                         <input type="text" >
                                     </div>
                             </div>
-                            <div class="form-row col-xs-12">
+                            <div class="form-row marBtm30 col-xs-12">
                                     <div class="form-col col-xs-6 no-padding">
                                         <label for="">Language</label>
                                         <select name="" id="">
@@ -179,8 +179,47 @@
                                                     </div>
                                             </div>
                                     </div>
+								</div>
+								<div class="form-row col-xs-12">
+                                    <div class="editor-wrapr col-xs-12 no-padding">
+										<div class="editor-head col-xs-12">
+											
+											<div class="left-style-wrapr">
+													<select name="" id="" class="font-size">
+															<option value="">10</option>
+															<option value="">11</option>
+															<option value="">12</option>
+															<option value="">13</option>
+															
+														</select>
+														<span class="glyphicon glyphicon-triangle-bottom"></span>
+											</div>
+											<div class="middle-style-wrapr">
+												<button type="button" class="bold">B</button>
+												<button type="button" class="italic">I</button>
+												<button type="button" class="underline">U</button>
+												<button type="button" class="color-picker">
+													<span></span>
+													<span class="glyphicon glyphicon-triangle-bottom"></span>
+													<!-- <input type="color" name="" id=""> -->
+												</button>
+											</div>
+											<div class="right-style-wrapr">
+												<button class="left-align"></button>
+												<button class="middle-align"></button>
+												<button class="right-align"></button>
+												<button class="justify-align"></button>
+											</div>
+											<div class="add">
+												<span class="glyphicon glyphicon-plus-sign"></span>
+											</div>
+										</div>
+										<div class="editor-body col-xs-12 no-padding">
+											<textarea name="" id="" cols="30" rows="10"></textarea>
+										</div>
+									</div>
                                 </div>
-                                <div class="form-row col-xs-12">
+                                <div class="form-row col-xs-12 marBtm0">
                                     <button type="button" class="form-btn">Cancel</button>
                                     <button type="button" class="form-btn">Preview</button>
                                     <button type="button" class="form-btn">Save</button>
