worked on responsive css changes for backoffice

--- a/html-design/backoffice/addAdmin.html
+++ b/html-design/backoffice/addAdmin.html
@@ -108,13 +108,13 @@
 									
 									<div class="title_with_search_dropdown_button">
 										<!-- <span>Key statistics</span> -->
-										<input type="search" name="" id="" placeholder="Search in users">
-										<select>
+										<input type="search" name="" id="" placeholder="Search in users" class="res440">
+										<select  class="res440">
 											<option>Admin status </option>
 											<option>Option 1 </option>
 											<option>Option 2 </option>
 										</select>
-										<a href="#">Add</a>
+										<a href="#"  class="res440">Add</a>
 									</div>
 									<div class="dashboard-tbl">
 										<table>
