--- a/html-design/backoffice/create-cms-page.html
+++ b/html-design/backoffice/create-cms-page.html
@@ -148,25 +148,26 @@
                         <div class="page-heading col-xs-12 mar-btm-5">Create new CMS page</div>
                         <form class="cms-form col-xs-12 ">
                             <div class="form-row col-xs-12">
-                                <div class="form-col col-xs-6 no-padding">
-                                    <label for="">Title of page</label>
+                                <div class="form-col col-xs-6 no-padding res480">
+                                    <label for="" class="col-xs">Title of page</label>
                                     <input type="text" >
                                 </div>
-                                <div class="form-col col-xs-6 no-padding-right">
+                                <div class="form-col col-xs-6 no-padding-right res480">
                                         <label for="">URL</label>
                                         <input type="text" >
                                     </div>
                             </div>
                             <div class="form-row marBtm30 col-xs-12">
-                                    <div class="form-col col-xs-6 no-padding">
+                                    <div class="form-col col-xs-6 no-padding res480">
                                         <label for="">Language</label>
                                         <select name="" id="">
                                             <option value="">Item1</option>
                                             <option value="">Item2</option>
                                             <option value="">Item3</option>
-                                        </select>
+										</select>
+										<span class="glyphicon glyphicon-triangle-bottom"></span>
                                     </div>
-                                    <div class="form-col col-xs-6 no-padding-right">
+                                    <div class="form-col col-xs-6 no-padding-right res480">
                                             <label for="">Display page</label>
                                             <div class="choice-wrapr">
                                                 <div class="choice">
@@ -180,7 +181,7 @@
                                             </div>
                                     </div>
 								</div>
-								<div class="form-row col-xs-12">
+								<div class="form-row col-xs-12 res480">
                                     <div class="editor-wrapr col-xs-12 no-padding">
 										<div class="editor-head col-xs-12">
 											
