worked on responsive css for cms-management page

--- a/html-design/backoffice/cms-managment.html
+++ b/html-design/backoffice/cms-managment.html
@@ -102,31 +102,32 @@
 								  </div>
 							</div>
 						</div>
-						<div class="padding-rl-10 middle-section width-80">				 		
-							<div class="dashboard-middle-section margin-bottom-50">								
-								<div class="title_with_dropdown">
+						<div class="padding-rl-10 middle-section width-80 res767">				 		
+							<div class="dashboard-middle-section margin-bottom-50 col-xs-12 no-padding">								
+								<div class="title_with_dropdown col-xs-12 no-padding">
 									<span>CMS management</span>
-									<button class="expandDrop"><i class="glyphicon glyphicon-plus-sign"></i></button>
+									
 									<select>
 										<option>Language </option>
 										<option>Option 1 </option>
 										<option>Option 2 </option>
 									</select>
-									
+									<button class="expandDrop"><i class="glyphicon glyphicon-plus-sign"></i></button>
 									<!-- <button>
 
 									</button> -->
 								</div>
-								<div class="dashboard-tbl">
+								<div class="dashboard-tbl col-xs-12 no-padding-left">
+									<!--  padding-right35 -->
 									<table>
 										<thead>
 											<tr>
-												<th>Title of page</th>
-												<th>Language</th>
-												<th>Most recent change</th>
-												<th>Created by</th>
-												<th>Options</th>
-												<th>Status</th>
+												<th class="no-padding"><label>Title of page</label></th>
+												<th class="no-padding"><label>Language</label></th>
+												<th class="no-padding"><label>Most recent change</label></th>
+												<th class="no-padding"><label>Created by</label></th>
+												<th class="no-padding"><label>Options</label></th>
+												<th class="wid93 res440 res320"><label>Status</label></th>
 											</tr>
 										</thead>
 										<tbody>
@@ -136,9 +137,9 @@
 												<td></td>
 												<td></td>
 												<td><a href="#">Edit</a><a href="#">Preview</a></td>
-												<td>
+												<td class="wid93 res440 res320 ">
 													<span class="green-circle"></span>
-													Active
+													<span class="link-black">Active</span>
 												</td>
 											</tr>
 										</tbody>
