worked on css changes for home and owners profile

--- a/html-design/backoffice/campaigns-page.html
+++ b/html-design/backoffice/campaigns-page.html
@@ -79,7 +79,7 @@
 	      					</div>
 						</div>
 					</div>
-					<div class="padding-rl-10 middle-section">	
+					<div class="padding-rl-10 middle-section res767 wid70">	
                         <div class="middle-section-search">
                             <form>
                                 <div class="input-group search-input-group">
