worked on html and css changes for forms

--- a/html-design/html/login.html
+++ b/html-design/html/login.html
@@ -28,11 +28,13 @@
 				<p>Register for free</p>
 				<form>
 					<div class="form-group">			 
-					    <input type="email" class="form-control" id="email" placeholder="User name / Email" />
+						<input type="email" class="form-control" id="email" placeholder="User name / Email" />
+						<span class="error-msg highlight">Enter username</span>
 					    <img src="images/checked.svg" />
 					</div>
 					<div class="form-group">			 
-					    <input type="password" class="form-control" id="password" placeholder="Password" />
+						<input type="password" class="form-control" id="password" placeholder="Password" />
+						<span class="error-msg highlight">Enter password</span>
 					    <img src="images/error.svg" />
 					</div>
 					<div class="form-group">
