--- a/html-design/html/reset-email.html
+++ b/html-design/html/reset-email.html
@@ -28,7 +28,8 @@
 				<p>We will send you an email to resetting your password.  </p>
 				<form>
 					<div class="form-group">			 
-					    <input type="email" class="form-control" id="email" placeholder="Email" />
+						<input type="email" class="form-control" id="email" placeholder="Email" />
+						<span class="error-msg highlight">Enter your email</span>
 					    <img src="images/checked.svg" />
 					</div>					
 					<div class="form-group">
