--- a/html-design/html/reset-password.html
+++ b/html-design/html/reset-password.html
@@ -28,11 +28,13 @@
 				<p>Please enter your new password here.</p>
 				<form>
 					<div class="form-group">			 
-					    <input type="password" class="form-control" id="password" placeholder="Enter new password" />
+						<input type="password" class="form-control" id="password" placeholder="Enter new password" />
+						<span class="error-msg highlight">Enter new password</span>
 					    <img src="images/checked.svg" />
 					</div>	
 					<div class="form-group">			 
-					    <input type="password" class="form-control" id="new-password" placeholder="Repeat password" />
+						<input type="password" class="form-control" id="new-password" placeholder="Repeat password" />
+						<span class="error-msg highlight">Reenter password</span>
 					    <img src="images/error.svg" />
 					</div>					
 					<div class="form-group">
