--- a/html-design/html/register.html
+++ b/html-design/html/register.html
@@ -28,19 +28,23 @@
 				<p>Register for free</p>
 				<form>
 					<div class="form-group">			 
-					    <input type="text" class="form-control" id="username" placeholder="User name" />
+						<input type="text" class="form-control" id="username" placeholder="User name" />
+						<span class="error-msg highlight">Enter user name</span>
 					    <img src="images/checked.svg" />
 					</div>
 					<div class="form-group">			 
-					    <input type="email" class="form-control" id="email" placeholder="Email" />
+						<input type="email" class="form-control" id="email" placeholder="Email" />
+						<span class="error-msg highlight">Enter email</span>
 					    <img src="images/error.svg" />
 					</div>
 					<div class="form-group">			 
-					    <input type="password" class="form-control" id="password" placeholder="Password" />
+						<input type="password" class="form-control" id="password" placeholder="Password" />
+						<span class="error-msg highlight">Enter password</span>
 					    <img src="images/checked.svg" />
 					</div>
 					<div class="form-group">			 
-					    <input type="password" class="form-control" id="password" placeholder="Repeat Password" />
+						<input type="password" class="form-control" id="password" placeholder="Repeat Password" />
+						<span class="error-msg highlight">Reenter password</span>
 					    <img src="images/error.svg" />
 					</div>
 					<div class="form-group">
