css issues fixed from cms-add-admin form and loader

--- a/html-design/html/loginPopup.html
+++ b/html-design/html/loginPopup.html
@@ -15,7 +15,7 @@
     
     <body> 
 
-    	<div id="note">
+    	<div class="login_pop_up" id="note">
             You are logged in <a id="close">[close]</a>
         </div>
         
