--- a/html-design/html/pageNotFound.html
+++ b/html-design/html/pageNotFound.html
@@ -18,9 +18,11 @@
 		<section class="page-not-found">
 			<div class="container">
 				<div class="row">
+                    <div class="col-xs-12 no-padding">
                     <div class="heading">This page isn't available</div>
                     <div class="sub-heading">The link you followed may be broken, or the page may have been removed</div>
                     <div class="logo-background"></div>
+                </div>
 				</div>
 			</div>
         </section>
