--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/global/picstagraph-web/css/index.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/global/picstagraph-web/styles/custom.css">
 
+    <!-- Google Map API -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-CYqpKC-iuXw28jDh7Ac4293PbLKPEQQ&libraries=places" async defer></script>
+    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
