--- a/html-design/html/information.html
+++ b/html-design/html/information.html
@@ -41,9 +41,10 @@
 						</div>
 					</div>
 					<div class="padding-l-10 middle-section width-80">
+						<div class="info-main-title">Title</div>
 						<div class="information-wrapper">
 							<div class="info-inner-wrapper">
-								<div class="info-main-title">Title</div>
+								<!-- <div class="info-main-title">Title</div> -->
 								<div class="text">This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.</div>
 								<img src="images/information.jpg" />
 								<div class="text">This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.</div>
