worked on logout bold

--- a/html-design/backoffice/addVerification.html
+++ b/html-design/backoffice/addVerification.html
@@ -59,7 +59,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="secondary_title log-out">
+                  <a href="#" class="secondary_title log-out textBold">
                     <span>Logout</span>
                   </a>
                 </li>
