--- a/html-design/backoffice/cms-managment.html
+++ b/html-design/backoffice/cms-managment.html
@@ -60,7 +60,7 @@
 												</a>
 											</li>
 											<li>
-												<a href="#" class="secondary_title log-out">							        		
+												<a href="#" class="secondary_title log-out textBold">							        		
 													<span>Logout</span>
 												</a>
 											</li>
@@ -215,7 +215,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="secondary_title log-out">
+                  <a href="#" class="secondary_title log-out textBold">
                     <span>Logout</span>
                   </a>
                 </li>
