--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
 
     <!-- Google Map API -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-CYqpKC-iuXw28jDh7Ac4293PbLKPEQQ&libraries=places" async defer></script>
-    
+    <link href="//vjs.zencdn.net/7.3.0/video-js.min.css" rel="stylesheet">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
